--- a/package.json
+++ b/package.json
@@ -3,5 +3,29 @@
   "version": "0.0.0",
   "description": "GCS proxy running on GAE for internal document sharing",
   "author": "Yuku Takahashi <yuku@flywheel.jp>",
-  "private": true
+  "private": true,
+  "scripts": {
+    "format": "run-s format:prettier format:eslint",
+    "format:prettier": "prettier --write '**/*.ts'",
+    "format:eslint": "eslint --fix '**/*.ts'",
+    "lint": "run-p lint:prettier lint:eslint",
+    "lint:prettier": "prettier -l '**/*.ts'",
+    "lint:eslint": "eslint '**/*.ts'",
+    "typecheck": "tsc --noEmit -p ."
+  },
+  "dependencies": {
+    "typescript": "^3.7.2"
+  },
+  "devDependencies": {
+    "@flywheel-jp/prettier-config": "^0.1.1",
+    "@flywheel-jp/tsconfig": "^0.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1"
+  },
+  "prettier": "@flywheel-jp/prettier-config"
 }
