--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "typecheck": "tsc --noEmit -p ."
   },
   "dependencies": {
+    "express": "^4.17.1",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
     "@flywheel-jp/prettier-config": "^0.1.1",
+    "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "eslint": "^6.6.0",
