--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flywheel-jp/bookshelf",
+  "name": "@flywheel-jp/mouseion",
   "version": "0.0.0",
   "description": "GCS proxy running on GAE for internal document sharing",
   "author": "Yuku Takahashi <yuku@flywheel.jp>",
