Use pug as template engine

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@google-cloud/storage": "^4.1.2",
     "@types/express": "^4.17.2",
     "express": "^4.17.1",
+    "pug": "^2.0.4",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
