--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "node": "~10"
   },
   "scripts": {
-    "build": "tsc -p .",
     "format": "run-s format:prettier format:eslint",
     "format:prettier": "prettier --write '**/*.ts'",
     "format:eslint": "eslint --fix '**/*.ts'",
     "lint": "run-p lint:prettier lint:eslint",
     "lint:prettier": "prettier -l '**/*.ts'",
     "lint:eslint": "eslint '**/*.ts'",
-    "prepare": "yarn build",
-    "start": "node ./index.js",
+    "start": "ts-node ./index.ts",
     "typecheck": "tsc --noEmit -p ."
   },
   "dependencies": {
@@ -24,6 +22,7 @@
     "@types/express": "^4.17.2",
     "express": "^4.17.1",
     "pug": "^2.0.4",
+    "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
