--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format": "run-s format:prettier format:eslint",
     "format:prettier": "prettier --write '**/*.ts'",
     "format:eslint": "eslint --fix '**/*.ts'",
+    "gcp-build": "tsc -p .",
     "lint": "run-p lint:prettier lint:eslint",
     "lint:prettier": "prettier -l '**/*.ts'",
     "lint:eslint": "eslint '**/*.ts'",
-    "start": "ts-node ./index.ts",
+    "start": "node ./index.js",
     "typecheck": "tsc --noEmit -p ."
   },
   "dependencies": {
@@ -22,7 +23,6 @@
     "@types/express": "^4.17.2",
     "express": "^4.17.1",
     "pug": "^2.0.4",
-    "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
@@ -33,7 +33,8 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "ts-node": "^8.5.2"
   },
   "prettier": "@flywheel-jp/prettier-config"
 }
