--- a/package.json
+++ b/package.json
@@ -20,13 +20,12 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^4.1.2",
-    "@types/express": "^4.17.2",
     "express": "^4.17.1",
-    "pug": "^2.0.4",
-    "typescript": "^3.7.2"
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@flywheel-jp/prettier-config": "^0.1.1",
+    "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "eslint": "^6.6.0",
@@ -34,7 +33,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "ts-node": "^8.5.2"
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   },
   "prettier": "@flywheel-jp/prettier-config"
 }
