--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:prettier": "prettier -l '**/*.ts'",
     "lint:eslint": "eslint '**/*.ts'",
     "start": "node ./index.js",
+    "start:dev": "ts-node -r dotenv/config ./index.ts",
     "typecheck": "tsc --noEmit -p ."
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
