--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
-name: Deploy and upload
+name: Deploy
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,11 +15,3 @@ jobs:
         uses: actions/gcloud/cli@master
         with:
           args: app deploy --project flywheel-mouseion
-  upload:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: flywheel-jp/mouseion/upload@master
-        with:
-          service-account-key: ${{ secrets.GCLOUD_AUTH }}
-          namespace: mouseion
