Remove namespace argument from upload action

--- a/upload/action.yml
+++ b/upload/action.yml
@@ -14,7 +14,8 @@ inputs:
     default: 'docs'
   namespace:
     description: 'Document namespace in Mouseion'
-    required: true
+    required: false
+    default: ''
 runs:
   using: 'docker'
   image: 'Dockerfile'
