--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: GCP Authenticate
-        uses: actions/gcloud/auth@master
-        env:
-          GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
-      - name: Deploy mouseion to GAE
-        uses: actions/gcloud/cli@master
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          args: app deploy --project flywheel-mouseion
+          version: 270.0.0
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+      - name: Deploy mouseion to GAE
+        run: gcloud app deploy --project flywheel-mouseion
